proceed after the bad bytes.  This behavior is incompatible with the
final R6RS standard, and besides contravenes the user's intention to
raise an error on bad input.  Guile now raises an error without
advancing the read pointer.  To skip over a bad encoding, set the port
conversion strategy to "substitute" and read a substitute character.

** API to define new port types from C has changed

See the newly expanded "I/O Extensions" in the manual, for full details.
Notably:

*** Remove `scm_set_port_mark'

Port mark functions have not been called since the switch to the BDW
garbage collector.

*** Remove `scm_set_port_equalp'

Likewise port equal functions weren't being called.  Given that ports
have their own internal buffers, it doesn't make sense to hook them into
equal? anyway.

*** Remove `scm_set_port_free'

It used to be that if an open port became unreachable, a special "free"
function would be called instead of the "close" function.  Now that the
BDW-GC collector allows us to run arbitrary code in finalizers, we can
simplify to just call "close" on the port and remove the separate free
functions.  Note that hooking into the garbage collector has some
overhead.  For that reason Guile exposes a new interface,
`scm_set_port_needs_close_on_gc', allowing port implementations to
indicate to Guile whether they need closing on GC or not.

*** Remove `scm_set_port_end_input', `scm_set_port_flush'

As buffering is handled by Guile itself, these functions which were to
manage an implementation-side buffer are no longer needed.

*** Change prototype of `scm_make_port_type'

The `read' (renamed from `fill_input') and `write' functions now operate
on bytevectors.  Also the `mode_bits' argument now inplicitly includes
SCM_OPN, so you don't need to include these.

*** Change prototype of port `close' function

The port close function now returns void.

*** Port and port type data structures are now opaque

Port type implementations should now use API to access port state.